修复神秘bug